# libfastrace

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  build.rs  cmake_uninstall.cmake.in  fastrace_cConfig.cmake.in  libfastraceConfig.cmake.in  minitrace_cConfig.cmake.in
examples/: CMakeLists.txt  asynchronous.c  asynchronous2.cc  get_started.c  get_started2.cc  synchronous.c  synchronous2.cc
include/: fastrace_c.h  libfastrace.h  minitrace_c.h
minitrace/: Cargo.toml  cbindgen.toml  gen_header.sh
minitrace/examples/: Makefile  asynchronous.c  get_started.c  synchronous.c
minitrace/include/: minitrace.h
minitrace/src/: lib.rs  macros.rs  span.rs
minitrace/src/collector/: console_reporter.rs  global_collector.rs  mod.rs  opentelemetry_reporter.rs
minitrace/src/local/: local_collector.rs  local_span.rs  mod.rs
src/: fastrace_c.cpp  lib.rs  libfastrace.cpp  minitrace_c.cpp
