[package]
name = "minitrace-c"
version = "0.5.1"
authors = [ "Wenbo Zhang <ethercflow.com>" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "minitrace_rust"
crate-type = ["staticlib"]

[dependencies]
cxx = "1.0.106"
libc = "0.2"
minitrace = { version = "0.5.1", features = ["enable"] }
minitrace-opentelemetry = "0.5.1"
opentelemetry = { version = "0.19", features = ["trace"] }
opentelemetry-otlp = { version = "0.12", features = ["trace", "grpc-sys"] }

[build-dependencies]
cxx-build = "1.0.106"
