[package]
name = "libfastrace"
version = "0.7.2"
authors = [ "Wenbo Zhang <ethercflow.com>" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fastrace_rust"
crate-type = ["staticlib", "rlib"]

[dependencies]
cxx = "1.0.128"
libc = "0.2"
fastrace = { version = "=0.7.2", features = ["enable"] }
fastrace-opentelemetry = "=0.7.2"
opentelemetry = { version = "=0.24", features = ["trace"] }
opentelemetry-otlp = { version = "=0.17", features = ["trace"] }
opentelemetry_sdk = { version = "=0.24", features = ["trace"] }
tokio = { version = "1.38", features = ["rt", "rt-multi-thread"] }
once_cell = "1.19.0"

[build-dependencies]
cxx-build = "1.0.106"
