[package]
name = "minitrace-c"
version = "0.5.0"
edition = "2021"
authors = [ "Wenbo Zhang <ethercflow.com>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
libc = "0.2"
minitrace = { version = "0.5", features = ["enable"] }
minitrace-opentelemetry = "0.5"
opentelemetry = { version = "0.19", features = ["trace"] }
opentelemetry-otlp = { version = "0.12", features = ["trace", "grpc-sys"] }
